# bfiles

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  wrknv.toml
.dev/: PLAN.md  TODO.md
.github/workflows/: ci.yml  release.yml
docs/: MATURITY_REPORT.md  bfiles.1  index.md  reference.md  specs.txt
docs/archive/: AGENTS.md
docs/dev/: 20250501-1855-gemini-25-pro-01-preparing-to-launch.md  20250502-1848-gemini-debugging.md
docs/genie-codeassist/: LLM_api_guide.md  LLM_refactor_guide.md
scripts/memray/: memray_bundler_stress.py  memray_parser_stress.py
src/bfiles/: __init__.py  bundler.py  chunking.py  cli.py  collection.py  config.py  core.py  errors.py  exclusions.py  extractor.py  metadata.py  metadata_writer.py  output.py  parser.py  progress.py  reader.py  telemetry.py  unbundler.py  utils.py
tests/: __init__.py  conftest.py  test_bundle_parser.py  test_cli.py  test_config.py  test_core.py  test_exclusions.py  test_metadata.py  test_metadata_writer.py  test_output.py  test_unbundler_chunks.py  test_unbundler_extraction.py  test_unbundler_security.py  test_utils.py
tests/fixtures/: __init__.py  cli.py  config.py  core.py  exclusions.py  metadata.py  output.py
tests/fixtures/files/cli_project/: .gitignore  README.md  config.cfg  notebook.ipynb
tests/fixtures/files/cli_project/src/: __init__.py  main.py
tests/fixtures/files/cli_project/subdir/: helper.py
tests/fixtures/files/core_project/: .hidden_core_file  duplicate.txt  file2.py
tests/fixtures/files/core_project/link_target/: inside_link_target.txt
tests/fixtures/files/core_project/link_to_dir/: linked_file.txt
tests/fixtures/files/core_project/subdir/: subfile.txt
tests/fixtures/files/gitignore_project/: .gitignore  main.py
tests/fixtures/files/gitignore_project/sub/: .gitignore
tests/fixtures/files/gitignore_project/sub/subsub/: final.py
tests/fixtures/files/include_exclude_project/: a.py  b.py
tests/fixtures/files/include_exclude_project/sub/: e.py
tests/memray/: baselines.json  test_bundler_memory.py  test_parser_memory.py
